# OpenCodeUI

./: .gitignore  index.html  openapi_doc.json  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-router/: Cargo.toml
src-router/src/: config.rs  main.rs  port_scanner.rs  proxy.rs  router.rs  routes.html  utils.rs
src/api/: mcp.ts
src/components/: BottomPanel.tsx  ContentBlock.tsx  DiffModal.tsx  DiffView.tsx  DiffViewer.tsx  FileExplorer.tsx  FullscreenViewer.tsx  Icons.tsx  MarkdownRenderer.tsx  McpPanel.tsx  MultiFileDiffModal.tsx  OutlineIndex.tsx  PanelContainer.tsx  RightPanel.tsx  SessionChangesPanel.tsx  SkillPanel.tsx  Terminal.tsx  TerminalPanel.tsx  WorktreePanel.tsx  index.ts
src/components/ui/: CopyButton.tsx  ResizablePanel.tsx  SmoothHeight.tsx
src/constants/: pagination.ts
src/contexts/: DirectoryContext.tsx  SessionContext.tsx
src/features/attachment/: AttachmentItem.tsx
src/features/chat/: ChatArea.tsx  Header.tsx  InputBox.tsx  ModelSelector.tsx  PermissionDialog.tsx  QuestionDialog.tsx  RetryStatusInline.tsx  Sidebar.tsx
src/features/mention/: MentionMenu.tsx  MentionTag.tsx  useMention.ts
src/hooks/: index.ts  useChatSession.ts  useGlobalEvents.ts  useImageCompressor.ts  useMessageAnimation.ts  useSessionManager.ts  useSmoothStream.ts  useTheme.ts
src/store/: activeSessionStore.ts  index.ts  keybindingStore.ts  layoutStore.ts  messageCacheStore.ts  messageStore.ts  themeStore.ts
src/themes/: index.ts
src/types/api/: mcp.ts
src/utils/: logger.ts  toolUtils.tsx
src/workers/: imageCompressor.worker.ts
(+41 files in other folders)
