[package]
name = "opencodeui-router"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
const_format = "0.2.35"
env_logger = "0.11.9"
form_urlencoded = "1.2.2"
http = "1.4.0"
log = { version = "0.4.29", features = ["release_max_level_info"] }
matchit = "0.9.1"
netlink-packet-core = "0.7.0"
netlink-packet-sock-diag = "0.4.2"
netlink-sys = { version = "0.8.8", features = ["tokio_socket"] }
netstat2 = "0.11.2"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
pingora = { version = "0.8.0", features = ["proxy"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0" }

[profile.release]
strip = true
lto = "thin"
panic = "abort"
codegen-units = 1
